/iTrade/ChangeLog
===============================================================================

On the road for v0.4.8 (Nausicaa2)

===============================================================================

2006-12-13  Gilles Dumortier <dgil at ieee.org>
	* Display 'Manual Refresh' when Auto Refresh is Off
	* Prepare website to switch to 0.4.5 official release
	* Be sure to select the latest wxPython release

2006-12-12  Gilles Dumortier <dgil at ieee.org>
	* Disable menu for "not implemented" features (SF bug 1613536)
	* wxPython 2.8 : non-regression testing (SF bug 1614304)
	* Money Management : HTML generated page use iso-8859-1 charset
	* News : Boursorama News provider was buggy (SF bug 1612349)
	* News : saving the cache with non ASCII char (SF bug 1613121) / UTF8
	* Fix list of portfolio files when using a specific usrdata/ folder

===============================================================================

2006-12-09  Gilles Dumortier <dgil at ieee.org>
	* Prepare 0.4.5 official release
		SVN tag : ITRADE_0_4_5_NAUSICAA_TAG
		SVN branch : ITRADE_0_4_5_NAUSICAA_BRANCH

2006-12-08  Gilles Dumortier <dgil at ieee.org>
	* As requested by Sourceforge, migrate website to the new subversion :
		https://itrade.svn.sourceforge.net/svnroot/itrade
	  old URL access still working (think to "relocate" your source to the
	  new URL above).

2006-12-07  Gilles Dumortier <dgil at ieee.org>
	* No previous historic but volume : IndexError (SF bug 1609473)
	* Crash starting with empty /usrdata folder (SF bug 1609893)
	* --user (or -u) command line to select specific usrdata folder
		i.e.: python itrade.py --user usrdata.dev
	* usrdata/ and usrdata.dev/ cleanup
	* New module itrade_vat.py for VAT back-end management

2006-12-04  Gilles Dumortier <dgil at ieee.org>
	* Graph view : draw horizontal/vertical lines (SF bug 1393834)
	* Prepare 0.4.5 official release

2006-12-03  Gilles Dumortier <dgil at ieee.org>
	* Stochastic Indicator (formula still bogus)