@@ -5,6 +5,9 @@ On the road for v0.4.8 (Nausicaa2)
 
 ===============================================================================
 
+2006-12-14  Gilles Dumortier <dgil at ieee.org>
+	* Quote view : icon should also support .PNG (SF bug 1615945)
+
 2006-12-13  Gilles Dumortier <dgil at ieee.org>
 	* Display 'Manual Refresh' when Auto Refresh is Off
 	* Prepare website to switch to 0.4.5 official release
